location loads via view(CTE)

--- a/source/MonitoringClient/App.config
+++ b/source/MonitoringClient/App.config
@@ -44,6 +44,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="invEntities" connectionString="metadata=res://*/Persistence.Test.csdl|res://*/Persistence.Test.ssdl|res://*/Persistence.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ROGU9TJ\LAFI;initial catalog=inv;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="InvDb" connectionString="metadata=res://*/Persistence.EntityFramework.InventarisierungDb.csdl|res://*/Persistence.EntityFramework.InventarisierungDb.ssdl|res://*/Persistence.EntityFramework.InventarisierungDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ROGU9TJ\LAFI;initial catalog=inv;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InvDb" connectionString="metadata=res://*/Persistence.EntityFramework.InventarisierunsgDb.csdl|res://*/Persistence.EntityFramework.InventarisierunsgDb.ssdl|res://*/Persistence.EntityFramework.InventarisierunsgDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ROGU9TJ\LAFI;initial catalog=inv;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
