--- a/source/MonitoringClient/packages.config
+++ b/source/MonitoringClient/packages.config
@@ -7,7 +7,8 @@
   <package id="Google.Protobuf" version="3.8.0" targetFramework="net472" />
   <package id="linq2db" version="2.7.4" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.17" targetFramework="net472" />
-  <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
-  <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
