--- a/source/MonitoringClientTests/packages.config
+++ b/source/MonitoringClientTests/packages.config
@@ -6,5 +6,8 @@
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.17" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
