--- a/source/MonitoringClinetDemo/packages.config
+++ b/source/MonitoringClinetDemo/packages.config
@@ -10,6 +10,7 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="Syroot.Windows.IO.KnownFolders" version="1.2.1" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
